// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getAssistsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 76.92307692307693,
    "primaryText": 10,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 13,
    "teamTricode": "DAL",
  },
  "label": "Assists",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getBlocksStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 0,
    "primaryText": 0,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 1,
    "teamTricode": "DAL",
  },
  "label": "Blocks",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getDefReboundsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 84.21052631578947,
    "primaryText": 16,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 19,
    "teamTricode": "DAL",
  },
  "label": "Defensive Rebounds",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getFastBreakPtsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 100,
    "primaryText": 3,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 33.33333333333333,
    "primaryText": 1,
    "teamTricode": "DAL",
  },
  "label": "Fast Break Points",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getFieldGoalStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 44.1860465116279,
    "primaryText": "19/43",
    "secondaryText": "44.2%",
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 40,
    "primaryText": "20/50",
    "secondaryText": "40.0%",
    "teamTricode": "DAL",
  },
  "label": "Field Goals",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getFreeThrowStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 100,
    "primaryText": "7/7",
    "secondaryText": "100.0%",
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 86.6666666666667,
    "primaryText": "13/15",
    "secondaryText": "86.7%",
    "teamTricode": "DAL",
  },
  "label": "Free Throws",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getOffReboundsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 50,
    "primaryText": 5,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 10,
    "teamTricode": "DAL",
  },
  "label": "Offensive Rebounds",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getPtsOffTurnoversStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 50,
    "primaryText": 4,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 8,
    "teamTricode": "DAL",
  },
  "label": "Points Off Turnovers",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getReboundsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 72.41379310344827,
    "primaryText": 21,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 29,
    "teamTricode": "DAL",
  },
  "label": "Total Rebounds",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getStealsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 0,
    "primaryText": 0,
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 2,
    "teamTricode": "DAL",
  },
  "label": "Steals",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getThreePtStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 36.8421052631579,
    "primaryText": "7/19",
    "secondaryText": "36.8%",
    "teamTricode": "OKC",
  },
  "homeTeam": Object {
    "percentage": 41.9354838709677,
    "primaryText": "13/31",
    "secondaryText": "41.9%",
    "teamTricode": "DAL",
  },
  "label": "3-Pointers",
}
`;
